<resources>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="app_name">Library</string>
    <string name="access">Availability</string>
    <string name="access_true">Available</string>
    <string name="access_false">Unavailable</string>
    <string name="id" translatable="false">ID</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="numOfPage">Pages</string>
    <string name="numOfPub">Publication №</string>
    <string name="monthOfPub">Month</string>
    <string name="diskType">Type</string>
    <string name="book">Book</string>
    <string name="newspaper">Newspaper</string>
    <string name="disk">Disk</string>
    <string name="take">Take</string>
    <string name="add">Add to library</string>
    <string name="returns">Return to library</string>
    <string name="item_added">Item added to library</string>


    <string name="error">Error</string>
    <string name="error_fill">Fill in all fields</string>
    <string name="error_id">Element with this id already exists</string>
    <string name="error_db">Error loading database</string>
    <string name="error_db_remove">Error deleting item from database</string>
    <string name="error_db_add">Error adding item to database</string>
    <string name="error_db_load">Error loading data from database</string>
    <string name="error_db_update">Error editing data in database</string>
    <string name="error_unknown">Unknown error</string>
    <string name="reload">Reload</string>

    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="loading">Loading</string>
    <string name="my_library">My library</string>
    <string name="google_books">Google Books</string>
    <string name="search">Search</string>
    <string name="unknown">Unknown</string>
    <string name="empty_search">Empty search query</string>
    <string name="error_timeout">Server timeout exceeded</string>
    <string name="error_connection">Connection problems. Check your internet connection.</string>
    <string name="error_400">Invalid request</string>
    <string name="error_403">Access Denied</string>
    <string name="error_404">Result Not Found</string>
    <string name="error_500">Server Error</string>
    <string name="error_502">Bad Gateway</string>
    <string name="error_503">Server Unavailable</string>

</resources>