<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.MainFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFieldsLayout" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/paginationProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rcView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rcView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />

            <include layout="@layout/shimmer_item" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:selectionRequired="true"
        app:checkedButton="@+id/libraryButton"
        app:singleSelection="true">

        <Button
            android:id="@+id/libraryButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_library"
            android:textSize="16sp"
            app:icon="@drawable/ic_my_library"
            app:iconPadding="4dp" />

        <Button
            android:id="@+id/googleBooksButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_books"
            android:textSize="16sp"
            app:icon="@drawable/ic_google_books"
            app:iconPadding="4dp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/searchFieldsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/buttonGroup">


        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/name"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <EditText
            android:id="@+id/authorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/author"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <Button
            android:id="@+id/searchButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:text="@string/search"
            app:icon="@drawable/ic_search"
            app:iconPadding="4dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>